Data from url moved to databases

--- a/tmp.html
+++ b/tmp.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="format-detection" content="telephone=no" />
 <meta name="zoom:lang" content="ru" />
-    <meta name="zoom:last-modified" content="Thu, 03 Feb 2022 21:00:00 GMT" />
+    <meta name="zoom:last-modified" content="Fri, 04 Feb 2022 21:00:00 GMT" />
 <title>Учетные цены на аффинированные драгоценные металлы | Банк России</title>
 
 
@@ -205,7 +205,7 @@
                                         <div class="header_link"><a href="/reception/">Интернет-приемная</a></div>
 <div class="header_lang">
             <div class="header_lang_item _active"><span><!--noindex-->RU<!--/noindex--></span></div>
-            <div class="header_lang_item"><a href="/Localization/SwitchLanguage?url=%2Fhd_base%2Fmetall%2Fmetall_base_new%2F%3FUniDbQuery.Posted%3DTrue%26UniDbQuery.From%3D24.01.2022%26UniDbQuery.To03.02.2022%26UniDbQuery.Gold%3Dtrue%26UniDbQuery.Silver%3Dtrue%26UniDbQuery.Platinum%3Dtrue%26UniDbQuery.Palladium%3Dtrue%26UniDbQuery.so%3D1&amp;from=ru-RU&amp;to=en-CB"><!--noindex-->EN<!--/noindex--></a></div>
+            <div class="header_lang_item"><a href="/Localization/SwitchLanguage?url=%2Fhd_base%2Fmetall%2Fmetall_base_new%2F%3FUniDbQuery.Posted%3DTrue%26UniDbQuery.From%3D27.01.2022%26UniDbQuery.To06.02.2022%26UniDbQuery.Gold%3Dtrue%26UniDbQuery.Silver%3Dtrue%26UniDbQuery.Platinum%3Dtrue%26UniDbQuery.Palladium%3Dtrue%26UniDbQuery.so%3D1&amp;from=ru-RU&amp;to=en-CB"><!--noindex-->EN<!--/noindex--></a></div>
 </div>
 
                                     </div>
@@ -239,7 +239,7 @@
                                     <div class="header_link"><a href="/reception/">Интернет-приемная</a></div>
 <div class="header_lang">
             <div class="header_lang_item _active"><span><!--noindex-->RU<!--/noindex--></span></div>
-            <div class="header_lang_item"><a href="/Localization/SwitchLanguage?url=%2Fhd_base%2Fmetall%2Fmetall_base_new%2F%3FUniDbQuery.Posted%3DTrue%26UniDbQuery.From%3D24.01.2022%26UniDbQuery.To03.02.2022%26UniDbQuery.Gold%3Dtrue%26UniDbQuery.Silver%3Dtrue%26UniDbQuery.Platinum%3Dtrue%26UniDbQuery.Palladium%3Dtrue%26UniDbQuery.so%3D1&amp;from=ru-RU&amp;to=en-CB"><!--noindex-->EN<!--/noindex--></a></div>
+            <div class="header_lang_item"><a href="/Localization/SwitchLanguage?url=%2Fhd_base%2Fmetall%2Fmetall_base_new%2F%3FUniDbQuery.Posted%3DTrue%26UniDbQuery.From%3D27.01.2022%26UniDbQuery.To06.02.2022%26UniDbQuery.Gold%3Dtrue%26UniDbQuery.Silver%3Dtrue%26UniDbQuery.Platinum%3Dtrue%26UniDbQuery.Palladium%3Dtrue%26UniDbQuery.so%3D1&amp;from=ru-RU&amp;to=en-CB"><!--noindex-->EN<!--/noindex--></a></div>
 </div>
 
                                 </div>
@@ -384,7 +384,7 @@ $(function() {
 
         <!--noindex-->
 <div class="block-part">
-<form action="/hd_base/metall/metall_base_new/?UniDbQuery.Posted=True&amp;UniDbQuery.From=24.01.2022&amp;UniDbQuery.To03.02.2022&amp;UniDbQuery.Gold=true&amp;UniDbQuery.Silver=true&amp;UniDbQuery.Platinum=true&amp;UniDbQuery.Palladium=true&amp;UniDbQuery.so=1" data-auto-submit="true" method="get"><input id="UniDbQuery_Posted" name="UniDbQuery.Posted" type="hidden" value="True" />        <div class="block-part vertical" id="UniDbQuery_form">
+<form action="/hd_base/metall/metall_base_new/?UniDbQuery.Posted=True&amp;UniDbQuery.From=27.01.2022&amp;UniDbQuery.To06.02.2022&amp;UniDbQuery.Gold=true&amp;UniDbQuery.Silver=true&amp;UniDbQuery.Platinum=true&amp;UniDbQuery.Palladium=true&amp;UniDbQuery.so=1" data-auto-submit="true" method="get"><input id="UniDbQuery_Posted" name="UniDbQuery.Posted" type="hidden" value="True" />        <div class="block-part vertical" id="UniDbQuery_form">
 
 
 
@@ -397,12 +397,12 @@ $(function() {
     <div class="filter" >
             <div class="datepicker-filter" data-datepicker-period-filter
          data-min-date="01.07.2008"
-         data-max-date="04.02.2022"
-         data-default-value-from="25.01.2022"
-         data-default-value-to="04.02.2022">
-        <input class="datepicker-filter_input-from" type="hidden" name="UniDbQuery.From" value="24.01.2022" />
-        <input class="datepicker-filter_input-to" type="hidden" name="UniDbQuery.To" value="04.02.2022" />
-        <button class="datepicker-filter_button" type="button">24.01.2022 - 04.02.2022</button>
+         data-max-date="05.02.2022"
+         data-default-value-from="26.01.2022"
+         data-default-value-to="05.02.2022">
+        <input class="datepicker-filter_input-from" type="hidden" name="UniDbQuery.From" value="27.01.2022" />
+        <input class="datepicker-filter_input-to" type="hidden" name="UniDbQuery.To" value="05.02.2022" />
+        <button class="datepicker-filter_button" type="button">27.01.2022 - 05.02.2022</button>
         <div class="datepicker-filter_modal">
             <div class="datepicker-filter_head">
                 <div class="datepicker-filter_close"></div>
@@ -500,6 +500,13 @@ $(function() {
         <th class="right">Палладий</th>
       </tr>
       <tr>
+        <td>05.02.2022</td>
+        <td class="right">4 436,7400</td>
+        <td class="right">54,6700</td>
+        <td class="right">2 513,5500</td>
+        <td class="right">5 723,9600</td>
+      </tr>
+      <tr>
         <td>04.02.2022</td>
         <td class="right">4 445,0800</td>
         <td class="right">56,1400</td>
@@ -547,20 +554,6 @@ $(function() {
         <td class="right">60,0600</td>
         <td class="right">2 659,9300</td>
         <td class="right">5 695,4900</td>
-      </tr>
-      <tr>
-        <td>26.01.2022</td>
-        <td class="right">4 641,2600</td>
-        <td class="right">60,8500</td>
-        <td class="right">2 581,5000</td>
-        <td class="right">5 496,7500</td>
-      </tr>
-      <tr>
-        <td>25.01.2022</td>
-        <td class="right">4 572,3500</td>
-        <td class="right">60,4900</td>
-        <td class="right">2 576,8800</td>
-        <td class="right">5 233,3600</td>
       </tr>
     </table>
   </div>
@@ -622,7 +615,7 @@ $(function() {
             Cbr_RepositionOverlappingLabels: false
         };
 
-        var settings = {"chart":{},"xAxis":{"type":"category","categories":["25.01.2022","26.01.2022","27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":3323.4000,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[4572.3500,4641.2600,4683.3000,4608.1100,4478.8800,4459.8900,4479.7400,4431.2000,4445.0800],"color":"#0088cc","id":"s0","name":"Золото"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
+        var settings = {"chart":{},"xAxis":{"type":"category","categories":["27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022","05.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":3323.4000,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[4683.3000,4608.1100,4478.8800,4459.8900,4479.7400,4431.2000,4445.0800,4436.7400],"color":"#0088cc","id":"s0","name":"Золото"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
         var comboSettings = $.extend(true, {}, commonSettings, settings);
 
         var chart = Highcharts.chart(id, comboSettings);
@@ -676,7 +669,7 @@ $(function() {
             Cbr_RepositionOverlappingLabels: false
         };
 
-        var settings = {"chart":{},"xAxis":{"type":"category","categories":["25.01.2022","26.01.2022","27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":41.8350,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[60.4900,60.8500,60.0600,60.5600,57.9700,56.0400,55.7800,56.2600,56.1400],"color":"#0088cc","id":"s0","name":"Серебро"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
+        var settings = {"chart":{},"xAxis":{"type":"category","categories":["27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022","05.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":41.0025,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[60.0600,60.5600,57.9700,56.0400,55.7800,56.2600,56.1400,54.6700],"color":"#0088cc","id":"s0","name":"Серебро"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
         var comboSettings = $.extend(true, {}, commonSettings, settings);
 
         var chart = Highcharts.chart(id, comboSettings);
@@ -730,7 +723,7 @@ $(function() {
             Cbr_RepositionOverlappingLabels: false
         };
 
-        var settings = {"chart":{},"xAxis":{"type":"category","categories":["25.01.2022","26.01.2022","27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":1887.6750,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[2576.8800,2581.5000,2659.9300,2624.5000,2516.9000,2528.0800,2571.5400,2554.9500,2538.2900],"color":"#0088cc","id":"s0","name":"Платина"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
+        var settings = {"chart":{},"xAxis":{"type":"category","categories":["27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022","05.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":1885.1625,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[2659.9300,2624.5000,2516.9000,2528.0800,2571.5400,2554.9500,2538.2900,2513.5500],"color":"#0088cc","id":"s0","name":"Платина"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
         var comboSettings = $.extend(true, {}, commonSettings, settings);
 
         var chart = Highcharts.chart(id, comboSettings);
@@ -784,7 +777,7 @@ $(function() {
             Cbr_RepositionOverlappingLabels: false
         };
 
-        var settings = {"chart":{},"xAxis":{"type":"category","categories":["25.01.2022","26.01.2022","27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":3925.0200,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[5233.3600,5496.7500,5695.4900,5995.2400,5694.2900,6022.5700,5914.3000,5842.6900,5823.2700],"color":"#0088cc","id":"s0","name":"Палладий"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
+        var settings = {"chart":{},"xAxis":{"type":"category","categories":["27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022","05.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":4270.7175,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[5695.4900,5995.2400,5694.2900,6022.5700,5914.3000,5842.6900,5823.2700,5723.9600],"color":"#0088cc","id":"s0","name":"Палладий"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
         var comboSettings = $.extend(true, {}, commonSettings, settings);
 
         var chart = Highcharts.chart(id, comboSettings);
@@ -819,7 +812,7 @@ $(function() {
     <!--/noindex-->
 </div>
 
-            <div class="page-info_last-update">Последнее обновление страницы: 04.02.2022</div>
+            <div class="page-info_last-update">Последнее обновление страницы: 05.02.2022</div>
         <!--/noindex-->
     </div>
 
