Bot logics added

--- a/tmp.html
+++ b/tmp.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="format-detection" content="telephone=no" />
 <meta name="zoom:lang" content="ru" />
-    <meta name="zoom:last-modified" content="Fri, 04 Feb 2022 21:00:00 GMT" />
+    <meta name="zoom:last-modified" content="Mon, 07 Feb 2022 21:00:00 GMT" />
 <title>Учетные цены на аффинированные драгоценные металлы | Банк России</title>
 
 
@@ -205,7 +205,7 @@
                                         <div class="header_link"><a href="/reception/">Интернет-приемная</a></div>
 <div class="header_lang">
             <div class="header_lang_item _active"><span><!--noindex-->RU<!--/noindex--></span></div>
-            <div class="header_lang_item"><a href="/Localization/SwitchLanguage?url=%2Fhd_base%2Fmetall%2Fmetall_base_new%2F%3FUniDbQuery.Posted%3DTrue%26UniDbQuery.From%3D27.01.2022%26UniDbQuery.To06.02.2022%26UniDbQuery.Gold%3Dtrue%26UniDbQuery.Silver%3Dtrue%26UniDbQuery.Platinum%3Dtrue%26UniDbQuery.Palladium%3Dtrue%26UniDbQuery.so%3D1&amp;from=ru-RU&amp;to=en-CB"><!--noindex-->EN<!--/noindex--></a></div>
+            <div class="header_lang_item"><a href="/Localization/SwitchLanguage?url=%2Fhd_base%2Fmetall%2Fmetall_base_new%2F%3FUniDbQuery.Posted%3DTrue%26UniDbQuery.From%3D08.01.2022%26UniDbQuery.To07.02.2022%26UniDbQuery.Gold%3Dtrue%26UniDbQuery.Silver%3Dtrue%26UniDbQuery.Platinum%3Dtrue%26UniDbQuery.Palladium%3Dtrue%26UniDbQuery.so%3D1&amp;from=ru-RU&amp;to=en-CB"><!--noindex-->EN<!--/noindex--></a></div>
 </div>
 
                                     </div>
@@ -239,7 +239,7 @@
                                     <div class="header_link"><a href="/reception/">Интернет-приемная</a></div>
 <div class="header_lang">
             <div class="header_lang_item _active"><span><!--noindex-->RU<!--/noindex--></span></div>
-            <div class="header_lang_item"><a href="/Localization/SwitchLanguage?url=%2Fhd_base%2Fmetall%2Fmetall_base_new%2F%3FUniDbQuery.Posted%3DTrue%26UniDbQuery.From%3D27.01.2022%26UniDbQuery.To06.02.2022%26UniDbQuery.Gold%3Dtrue%26UniDbQuery.Silver%3Dtrue%26UniDbQuery.Platinum%3Dtrue%26UniDbQuery.Palladium%3Dtrue%26UniDbQuery.so%3D1&amp;from=ru-RU&amp;to=en-CB"><!--noindex-->EN<!--/noindex--></a></div>
+            <div class="header_lang_item"><a href="/Localization/SwitchLanguage?url=%2Fhd_base%2Fmetall%2Fmetall_base_new%2F%3FUniDbQuery.Posted%3DTrue%26UniDbQuery.From%3D08.01.2022%26UniDbQuery.To07.02.2022%26UniDbQuery.Gold%3Dtrue%26UniDbQuery.Silver%3Dtrue%26UniDbQuery.Platinum%3Dtrue%26UniDbQuery.Palladium%3Dtrue%26UniDbQuery.so%3D1&amp;from=ru-RU&amp;to=en-CB"><!--noindex-->EN<!--/noindex--></a></div>
 </div>
 
                                 </div>
@@ -384,7 +384,7 @@ $(function() {
 
         <!--noindex-->
 <div class="block-part">
-<form action="/hd_base/metall/metall_base_new/?UniDbQuery.Posted=True&amp;UniDbQuery.From=27.01.2022&amp;UniDbQuery.To06.02.2022&amp;UniDbQuery.Gold=true&amp;UniDbQuery.Silver=true&amp;UniDbQuery.Platinum=true&amp;UniDbQuery.Palladium=true&amp;UniDbQuery.so=1" data-auto-submit="true" method="get"><input id="UniDbQuery_Posted" name="UniDbQuery.Posted" type="hidden" value="True" />        <div class="block-part vertical" id="UniDbQuery_form">
+<form action="/hd_base/metall/metall_base_new/?UniDbQuery.Posted=True&amp;UniDbQuery.From=08.01.2022&amp;UniDbQuery.To07.02.2022&amp;UniDbQuery.Gold=true&amp;UniDbQuery.Silver=true&amp;UniDbQuery.Platinum=true&amp;UniDbQuery.Palladium=true&amp;UniDbQuery.so=1" data-auto-submit="true" method="get"><input id="UniDbQuery_Posted" name="UniDbQuery.Posted" type="hidden" value="True" />        <div class="block-part vertical" id="UniDbQuery_form">
 
 
 
@@ -397,12 +397,12 @@ $(function() {
     <div class="filter" >
             <div class="datepicker-filter" data-datepicker-period-filter
          data-min-date="01.07.2008"
-         data-max-date="05.02.2022"
-         data-default-value-from="26.01.2022"
-         data-default-value-to="05.02.2022">
-        <input class="datepicker-filter_input-from" type="hidden" name="UniDbQuery.From" value="27.01.2022" />
-        <input class="datepicker-filter_input-to" type="hidden" name="UniDbQuery.To" value="05.02.2022" />
-        <button class="datepicker-filter_button" type="button">27.01.2022 - 05.02.2022</button>
+         data-max-date="08.02.2022"
+         data-default-value-from="29.01.2022"
+         data-default-value-to="08.02.2022">
+        <input class="datepicker-filter_input-from" type="hidden" name="UniDbQuery.From" value="08.01.2022" />
+        <input class="datepicker-filter_input-to" type="hidden" name="UniDbQuery.To" value="08.02.2022" />
+        <button class="datepicker-filter_button" type="button">08.01.2022 - 08.02.2022</button>
         <div class="datepicker-filter_modal">
             <div class="datepicker-filter_head">
                 <div class="datepicker-filter_close"></div>
@@ -500,6 +500,13 @@ $(function() {
         <th class="right">Палладий</th>
       </tr>
       <tr>
+        <td>08.02.2022</td>
+        <td class="right">4 406,8600</td>
+        <td class="right">54,7600</td>
+        <td class="right">2 467,2500</td>
+        <td class="right">5 469,8000</td>
+      </tr>
+      <tr>
         <td>05.02.2022</td>
         <td class="right">4 436,7400</td>
         <td class="right">54,6700</td>
@@ -554,6 +561,90 @@ $(function() {
         <td class="right">60,0600</td>
         <td class="right">2 659,9300</td>
         <td class="right">5 695,4900</td>
+      </tr>
+      <tr>
+        <td>26.01.2022</td>
+        <td class="right">4 641,2600</td>
+        <td class="right">60,8500</td>
+        <td class="right">2 581,5000</td>
+        <td class="right">5 496,7500</td>
+      </tr>
+      <tr>
+        <td>25.01.2022</td>
+        <td class="right">4 572,3500</td>
+        <td class="right">60,4900</td>
+        <td class="right">2 576,8800</td>
+        <td class="right">5 233,3600</td>
+      </tr>
+      <tr>
+        <td>22.01.2022</td>
+        <td class="right">4 522,6200</td>
+        <td class="right">59,7300</td>
+        <td class="right">2 579,0700</td>
+        <td class="right">5 113,7600</td>
+      </tr>
+      <tr>
+        <td>21.01.2022</td>
+        <td class="right">4 513,9200</td>
+        <td class="right">58,4300</td>
+        <td class="right">2 568,2200</td>
+        <td class="right">5 025,8500</td>
+      </tr>
+      <tr>
+        <td>20.01.2022</td>
+        <td class="right">4 491,8000</td>
+        <td class="right">56,6300</td>
+        <td class="right">2 449,1700</td>
+        <td class="right">4 678,3900</td>
+      </tr>
+      <tr>
+        <td>19.01.2022</td>
+        <td class="right">4 444,0900</td>
+        <td class="right">56,4800</td>
+        <td class="right">2 370,7700</td>
+        <td class="right">4 609,0200</td>
+      </tr>
+      <tr>
+        <td>18.01.2022</td>
+        <td class="right">4 449,5700</td>
+        <td class="right">56,4700</td>
+        <td class="right">2 373,8600</td>
+        <td class="right">4 620,5800</td>
+      </tr>
+      <tr>
+        <td>15.01.2022</td>
+        <td class="right">4 438,9200</td>
+        <td class="right">56,6200</td>
+        <td class="right">2 384,8000</td>
+        <td class="right">4 586,9100</td>
+      </tr>
+      <tr>
+        <td>14.01.2022</td>
+        <td class="right">4 369,0800</td>
+        <td class="right">54,5300</td>
+        <td class="right">2 330,3100</td>
+        <td class="right">4 526,3600</td>
+      </tr>
+      <tr>
+        <td>13.01.2022</td>
+        <td class="right">4 352,3100</td>
+        <td class="right">54,1300</td>
+        <td class="right">2 331,4200</td>
+        <td class="right">4 583,7800</td>
+      </tr>
+      <tr>
+        <td>12.01.2022</td>
+        <td class="right">4 343,3400</td>
+        <td class="right">54,0300</td>
+        <td class="right">2 273,6800</td>
+        <td class="right">4 607,5200</td>
+      </tr>
+      <tr>
+        <td>11.01.2022</td>
+        <td class="right">4 349,2900</td>
+        <td class="right">53,7200</td>
+        <td class="right">2 321,3300</td>
+        <td class="right">4 681,3000</td>
       </tr>
     </table>
   </div>
@@ -615,7 +706,7 @@ $(function() {
             Cbr_RepositionOverlappingLabels: false
         };
 
-        var settings = {"chart":{},"xAxis":{"type":"category","categories":["27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022","05.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":3323.4000,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[4683.3000,4608.1100,4478.8800,4459.8900,4479.7400,4431.2000,4445.0800,4436.7400],"color":"#0088cc","id":"s0","name":"Золото"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
+        var settings = {"chart":{},"xAxis":{"type":"category","categories":["11.01.2022","12.01.2022","13.01.2022","14.01.2022","15.01.2022","18.01.2022","19.01.2022","20.01.2022","21.01.2022","22.01.2022","25.01.2022","26.01.2022","27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022","05.02.2022","08.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":3257.5050,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[4349.2900,4343.3400,4352.3100,4369.0800,4438.9200,4449.5700,4444.0900,4491.8000,4513.9200,4522.6200,4572.3500,4641.2600,4683.3000,4608.1100,4478.8800,4459.8900,4479.7400,4431.2000,4445.0800,4436.7400,4406.8600],"color":"#0088cc","id":"s0","name":"Золото"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
         var comboSettings = $.extend(true, {}, commonSettings, settings);
 
         var chart = Highcharts.chart(id, comboSettings);
@@ -669,7 +760,7 @@ $(function() {
             Cbr_RepositionOverlappingLabels: false
         };
 
-        var settings = {"chart":{},"xAxis":{"type":"category","categories":["27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022","05.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":41.0025,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[60.0600,60.5600,57.9700,56.0400,55.7800,56.2600,56.1400,54.6700],"color":"#0088cc","id":"s0","name":"Серебро"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
+        var settings = {"chart":{},"xAxis":{"type":"category","categories":["11.01.2022","12.01.2022","13.01.2022","14.01.2022","15.01.2022","18.01.2022","19.01.2022","20.01.2022","21.01.2022","22.01.2022","25.01.2022","26.01.2022","27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022","05.02.2022","08.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":40.2900,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[53.7200,54.0300,54.1300,54.5300,56.6200,56.4700,56.4800,56.6300,58.4300,59.7300,60.4900,60.8500,60.0600,60.5600,57.9700,56.0400,55.7800,56.2600,56.1400,54.6700,54.7600],"color":"#0088cc","id":"s0","name":"Серебро"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
         var comboSettings = $.extend(true, {}, commonSettings, settings);
 
         var chart = Highcharts.chart(id, comboSettings);
@@ -723,7 +814,7 @@ $(function() {
             Cbr_RepositionOverlappingLabels: false
         };
 
-        var settings = {"chart":{},"xAxis":{"type":"category","categories":["27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022","05.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":1885.1625,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[2659.9300,2624.5000,2516.9000,2528.0800,2571.5400,2554.9500,2538.2900,2513.5500],"color":"#0088cc","id":"s0","name":"Платина"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
+        var settings = {"chart":{},"xAxis":{"type":"category","categories":["11.01.2022","12.01.2022","13.01.2022","14.01.2022","15.01.2022","18.01.2022","19.01.2022","20.01.2022","21.01.2022","22.01.2022","25.01.2022","26.01.2022","27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022","05.02.2022","08.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":1705.2600,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[2321.3300,2273.6800,2331.4200,2330.3100,2384.8000,2373.8600,2370.7700,2449.1700,2568.2200,2579.0700,2576.8800,2581.5000,2659.9300,2624.5000,2516.9000,2528.0800,2571.5400,2554.9500,2538.2900,2513.5500,2467.2500],"color":"#0088cc","id":"s0","name":"Платина"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
         var comboSettings = $.extend(true, {}, commonSettings, settings);
 
         var chart = Highcharts.chart(id, comboSettings);
@@ -777,7 +868,7 @@ $(function() {
             Cbr_RepositionOverlappingLabels: false
         };
 
-        var settings = {"chart":{},"xAxis":{"type":"category","categories":["27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022","05.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":4270.7175,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[5695.4900,5995.2400,5694.2900,6022.5700,5914.3000,5842.6900,5823.2700,5723.9600],"color":"#0088cc","id":"s0","name":"Палладий"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
+        var settings = {"chart":{},"xAxis":{"type":"category","categories":["11.01.2022","12.01.2022","13.01.2022","14.01.2022","15.01.2022","18.01.2022","19.01.2022","20.01.2022","21.01.2022","22.01.2022","25.01.2022","26.01.2022","27.01.2022","28.01.2022","29.01.2022","01.02.2022","02.02.2022","03.02.2022","04.02.2022","05.02.2022","08.02.2022"],"title":{}},"yAxis":[{"tickAmount":5,"title":{"text":"руб./гр."},"min":3394.7700,"labels":{"format":"{value:,.f}"}}],"legend":{"enabled":false},"title":{},"subtitle":{},"series":[{"dataLabels":{"enabled":false,"format":"{point.y:,.f}"},"tooltip":{},"type":"line","lineWidth":2,"marker":{"enabled":false},"data":[4681.3000,4607.5200,4583.7800,4526.3600,4586.9100,4620.5800,4609.0200,4678.3900,5025.8500,5113.7600,5233.3600,5496.7500,5695.4900,5995.2400,5694.2900,6022.5700,5914.3000,5842.6900,5823.2700,5723.9600,5469.8000],"color":"#0088cc","id":"s0","name":"Палладий"}],"tooltip":{"headerFormat":"<div class=\"chart-tooltip-header\">{point.x}</div>","pointFormat":"<div class=\"chart-tooltip-line\">\r\n<div class=\"chart-tooltip-dot\" style=\"color:{point.color}\">●</div>\r\n<div class=\"chart-tooltip-series\">{series.name}: </div>\r\n<div class=\"chart-tooltip-value\">{point.y:,.f}{series.options.units}</div>\r\n</div>"}};
         var comboSettings = $.extend(true, {}, commonSettings, settings);
 
         var chart = Highcharts.chart(id, comboSettings);
@@ -812,7 +903,7 @@ $(function() {
     <!--/noindex-->
 </div>
 
-            <div class="page-info_last-update">Последнее обновление страницы: 05.02.2022</div>
+            <div class="page-info_last-update">Последнее обновление страницы: 08.02.2022</div>
         <!--/noindex-->
     </div>
 
